--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "sass": "^1.78.0",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.4.1"
   }
 }
